[package]
name = "exvoker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
console = "0.15.5"
ctrlc  = {version = "3.2.5", features = ["termination"]}
fuzzy-matcher = "0.3.7"
home = "0.5.4"
regex = "1.7.3"
serde = {version = "1.0.158", features = ["derive"]}
toml = "0.7.3"

[features]
default = ["fuzzy-select"]
fuzzy-select = []
